syntax = "proto3";

package sec10;

import "google/protobuf/empty.proto";


option java_package = "ru.nvn.models.sec10";
option java_multiple_files = true;



message BalanceCheckRequest{
  int32 account_number = 1;

}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts = 1;
}



message WithDrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}

message DepositRequest{
  oneof request {
    int32 accountNumber = 1;
    Money money = 2;
  }
}


enum ValidationCode{
  INVALID_ACCOUNT = 0;
  INVALID_AMOUNT = 1;
  INSUFFICIENT_BALANCE = 2;
}

message ErrorMessage{
  ValidationCode validation_code = 1;
}

service BankService{
  // unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  // server streaming
  rpc Withdraw(WithDrawRequest) returns (stream Money);

}

